# nldl

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
netlink15_derive/: Cargo.toml
netlink15_derive/src/: lib.rs
netlink15_derive/src/derive/: deserializable.rs  serializable.rs
netlink15_derive/src/parsing/: crate_attr.rs  mod.rs  nla_type.rs
netlink15_derive/tests/: test.rs
netlink15_derive/tests/ui/: derive-on-struct-fails.rs  derive-on-struct-fails.stderr  deriving-simple-enum-passes.rs  deriving_simple_enum_passes.rs  multiple-associated-values-fails.stderr  nla-type-duplicate-fails.rs  nla-type-duplicate-fails.stderr  nla-type-expressions-passes.rs  nla-type-missing-annotation-fails.stderr  nla-type-overflow-fails.rs  nla-type-overflow-fails.stderr  nla-type-unknown-multiple-fails.stderr  unannotated-deserialize-error-type-fails.rs  unannotated-deserialize-error-type-fails.stderr
netlink15_derive/tests/ui/deserializable/: derive-on-struct-fails.rs  derive-on-struct-fails.stderr  nla-type-duplicate-fails.rs  nla-type-duplicate-fails.stderr  nla-type-missing-annotation-fails.rs  nla-type-missing-annotation-fails.stderr  nla-type-missing-wildcard-on-deserialize-fails.rs  nla-type-missing-wildcard-on-deserialize-fails.stderr  nla-type-overflow-fails.rs  nla-type-overflow-fails.stderr  unannotated-deserialize-error-type-fails.rs
netlink15_derive/tests/ui/serializable/: multiple-associated-values-fails.rs  multiple-associated-values-fails.stderr  nla-type-missing-annotation-fails.rs  nla-type-missing-annotation-fails.stderr  nla-type-unknown-multiple-fails.rs
netlink15_genl/: Cargo.toml
netlink15_genl/src/: lib.rs  socket.rs
netlink15_genl/src/ctrl/: attr.rs
netlink15_genl/tests/: get_family.rs
netlink15_genl_ctrl/: Cargo.toml
netlink15_genl_ctrl/examples/: list.rs
netlink15_genl_ctrl/src/: attr.rs  err.rs  family.rs  get_family.rs  lib.rs  list.rs  mod.rs
netlink15_genl_ctrl/tests/: get_family.rs
nldl/: Cargo.toml  README.tpl
nldl/src/: lib.rs  utils.rs
nldl/src/attr/: err.rs  mod.rs  nested.rs  raw.rs  unknown.rs
nldl/src/message/: mod.rs  netlink_message_error.rs  netlink_message_type.rs  raw.rs
nldl/src/message/utils/: create_message_iterator.rs
nldl_derive/: Cargo.toml
nldl_derive/src/: lib.rs
nldl_derive/src/derive/: deserializable.rs  serializable.rs
nldl_derive/src/parsing/: crate_attr.rs  mod.rs  nla_type.rs  parse_or_panic.rs
nldl_derive/tests/ui/: deriving-simple-enum-passes.rs  nla-type-expressions-passes.rs
nldl_derive/tests/ui/deserializable/: derive-on-struct-fails.rs  derive-on-struct-fails.stderr  nla-type-duplicate-fails.rs  nla-type-duplicate-fails.stderr  nla-type-missing-annotation-fails.rs  nla-type-missing-annotation-fails.stderr  nla-type-missing-wildcard-on-deserialize-fails.rs  nla-type-missing-wildcard-on-deserialize-fails.stderr  (+4 more)
(+23 files in other folders)
