[package]
name = "netlink15_genl_ctrl"
version = "0.1.0"
authors = ["Brandon Cheng <brandon.cheng@protonmail.com>"]
edition = "2021"

[dependencies]
libc = "0.2.66"
nldl = { path = "../nldl" }
netlink15_derive = { path = "../netlink15_derive" }
netlink15_genl = { path = "../netlink15_genl" }
nix = "0.18.0"
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
