[package]
name = "nldl"
version = "0.1.0"
authors = ["Brandon Cheng <brandon.cheng@protonmail.com>"]
edition = "2021"

[dependencies]
arrayref = "0.3.6"
libc = "0.2.66"
# TODO: This should publish with a concrete version specifier to prevent mismatches.
nldl_derive = { optional = true, path = "../nldl_derive" }
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
nldl_derive = { path = "../nldl_derive" }

[features]
derive = ["nldl_derive"]
