[package]
name = "nldl_derive"
version = "0.1.0"
authors = ["Brandon Cheng <brandon.cheng@protonmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/gluxon/nldl"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
proc-macro2 = "1.0.18"
quote = "1.0"
thiserror = "1.0"

[dev-dependencies]
nldl = { path = "../nldl", features = ["derive"] }
trybuild = "1.0"
